--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -21,7 +21,7 @@ container_socket_proxy_container_image_tag: "{{ container_socket_proxy_version }
 container_socket_proxy_container_image_force_pull: "{{ container_socket_proxy_container_image_tag.endswith(':latest') or container_socket_proxy_container_image_tag.endswith(':nightly') }}"
 container_socket_proxy_container_image_registry_prefix: "{{ container_socket_proxy_container_image_registry_prefix_upstream }}"
 container_socket_proxy_container_image_registry_prefix_upstream: "{{ container_socket_proxy_container_image_registry_prefix_upstream_default }}"
-container_socket_proxy_container_image_registry_prefix_upstream_default: ghcr.io/
+container_socket_proxy_container_image_registry_prefix_upstream_default: docker.io/
 
 # The base container network. It will be auto-created by this role if it doesn't exist already.
 container_socket_proxy_container_network: "{{ container_socket_proxy_identifier }}"
